[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bcpics/mainmenupic.tres" type="Texture" id=1]
[ext_resource path="res://Scripts/mainmenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/seagramt.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/seagramt2.tres" type="DynamicFont" id=4]

[node name="mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
button_path = NodePath("Play")

[node name="mainmenupic" type="Sprite" parent="."]
position = Vector2( 514.031, 300.89 )
scale = Vector2( 0.773003, 1.17092 )
texture = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.371
anchor_top = 0.466
anchor_right = 0.638
anchor_bottom = 0.518
margin_left = 0.0959778
margin_top = 0.399994
margin_right = -0.312012
margin_bottom = 0.199982
rect_pivot_offset = Vector2( 175.674, 16 )
custom_fonts/font = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck Manager" type="Button" parent="."]
anchor_left = 0.371
anchor_top = 0.581
anchor_right = 0.64
anchor_bottom = 0.632
margin_left = -0.301544
margin_top = -1.34775
margin_right = 0.242432
margin_bottom = -0.947754
rect_pivot_offset = Vector2( 175.674, 16 )
custom_fonts/font = ExtResource( 4 )
text = "Deck Manager"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.371
anchor_top = 0.694
anchor_right = 0.642
anchor_bottom = 0.745
margin_left = 2.16684
margin_top = -1.36374
margin_right = 0.662842
margin_bottom = -0.963776
rect_pivot_offset = Vector2( 175.674, 16 )
custom_fonts/font = ExtResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 273.0
margin_top = 175.0
margin_right = 766.0
margin_bottom = 255.0
custom_fonts/font = ExtResource( 3 )
text = "VIOLENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Play" to="." method="_on_Play_toggled"]
[connection signal="pressed" from="Deck Manager" to="." method="_on_Deck_Manager_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
